tests/ui/suggestions/suggest-assoc-fn-call-deref.stderr
error[E0599]: no method named `test` found for struct `Box<Foo<i32>>` in the current scope
  --> $DIR/suggest-assoc-fn-call-deref.rs:13:7
   |
LL |     x.test();
   |     --^^^^--
   |     | |
   |     | this is an associated function, not a method
   |     help: use associated function syntax instead: `Foo::<i32>::test()`
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
note: the candidate is defined in an impl for the type `Foo<T>`
  --> $DIR/suggest-assoc-fn-call-deref.rs:8:5
   |
LL |     fn test() -> i32 { 1 }
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
